# Audio-Plugins

./: .gitignore  CMakeLists.txt
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/source/: AudioProcessorTest.cpp
